--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^10.10|^11.0|^12.0",
-        "makaveli/laravel-logger": "1.0.9"
+        "makaveli/laravel-logger": "^1.0",
+        "makaveli/laravel-soft-model-base": "^1.0"
     },
     "autoload": {
         "psr-4": {
